--- a/01_Basico/modulo4/Estructura_de_datos.ipynb
+++ b/01_Basico/modulo4/Estructura_de_datos.ipynb
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "A2OxEnshtGJD"
       },
@@ -102,7 +102,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +278,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +335,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "HcLwRAdU3Jy8"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -378,7 +378,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +430,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +466,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +503,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +541,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +679,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,7 +719,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,7 +767,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +814,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +857,7 @@
       "metadata": {
         "id": "GG3F8pOepnIQ"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -891,7 +891,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -914,7 +914,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +937,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -960,7 +960,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,7 +983,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,7 +1019,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1049,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,7 +1081,7 @@
       "metadata": {
         "id": "x8Vk1ehE8I21"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1097,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,7 +1122,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1144,7 @@
       "metadata": {
         "id": "722i5Iju865m"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1160,7 +1160,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1185,7 +1185,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1231,7 +1231,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1259,7 +1259,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1287,7 +1287,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,7 +1344,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1389,7 +1389,7 @@
       "metadata": {
         "id": "umIk-vrP_sXx"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1398,10 +1398,22 @@
         "print(dimensions[0])"
       ],
       "metadata": {
-        "id": "adBx3YWqB1xF"
+        "id": "adBx3YWqB1xF",
+        "outputId": "4c08766f-18ff-473f-8a86-5882804e233b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "200\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1409,21 +1421,48 @@
         "print(dimensions[1])"
       ],
       "metadata": {
-        "id": "EXHXNGfoB54Y"
+        "id": "EXHXNGfoB54Y",
+        "outputId": "55d4f09d-211b-42ed-8783-37eaddb24793",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "dimensions[0] = 250"
+        "dimensions[0] == 250"
       ],
       "metadata": {
-        "id": "CiUL-aB3CJMx"
+        "id": "CiUL-aB3CJMx",
+        "outputId": "d69c29b2-f905-48ed-a84d-8208addcc4a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1442,10 +1481,23 @@
         "    print(dimension)"
       ],
       "metadata": {
-        "id": "N9sSXtO3CoPp"
+        "id": "N9sSXtO3CoPp",
+        "outputId": "aa099dff-f0f1-404a-ebcc-911266b61394",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "200\n",
+            "50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1468,15 +1520,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ze8gyArPCz0Z",
-        "outputId": "5c1fc634-7c73-420a-ddf4-67cc58c33ba9"
+        "outputId": "083cb972-ea18-493a-b211-f220e89ad472"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original dimensions:\n",
+            "Dimensiones originales:\n",
             "200\n",
             "50\n"
           ]
@@ -1492,10 +1544,25 @@
         "  print(dimension)"
       ],
       "metadata": {
-        "id": "9Ej9n7-9C_Jc"
+        "id": "9Ej9n7-9C_Jc",
+        "outputId": "79899c83-cd9d-4d55-e61b-665f0876d4d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Modified dimensions:\n",
+            "400\n",
+            "100\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1515,6 +1582,98 @@
       "metadata": {
         "id": "WHk9FL9lDtBY"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "buffet = ('lomo saltado', 'chicharron', 'ceviche', 'pollo a la brasa', 'chiri uchu')\n",
+        "print(\"Los alimentos básicos son:\\n\")\n",
+        "for i in buffet:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "HVgzD36w50nr",
+        "outputId": "337681cc-0aff-490a-cbf5-1f1149dd0c57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Los alimentos básicos son:\n",
+            "\n",
+            "lomo saltado\n",
+            "chicharron\n",
+            "ceviche\n",
+            "pollo a la brasa\n",
+            "chiri uchu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "buffet[0] = 'adobo'"
+      ],
+      "metadata": {
+        "id": "KHsdXR4A6g_y",
+        "outputId": "ed394589-26b6-41c5-a7b3-7184843c7092",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-ad44305c862a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbuffet\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'adobo'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "buffet = ('parrilla', 'trucha frita', 'ceviche', 'pollo a la brasa', 'adobo')\n",
+        "print(\"Los alimentos básicos modificados son:\\n\")\n",
+        "for i in buffet:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "HU3rmYVD7UWr",
+        "outputId": "916d1f9b-d6cf-4ddc-810f-c15e07b7d011",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Los alimentos básicos modificados son:\n",
+            "\n",
+            "parrilla\n",
+            "trucha frita\n",
+            "ceviche\n",
+            "pollo a la brasa\n",
+            "adobo\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
