--- a/01_Basico/Modulo2/Estructuras_selectivas_repetitivas.ipynb
+++ b/01_Basico/Modulo2/Estructuras_selectivas_repetitivas.ipynb
@@ -1872,7 +1872,7 @@
           "height": 130
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1896,7 +1896,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1922,7 +1922,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1948,7 +1948,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1975,7 +1975,7 @@
         "id": "PukwJABJm1rP",
         "outputId": "22898145-fea6-4d33-bf48-dcb052a633ff"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2002,7 +2002,7 @@
         },
         "outputId": "8542a7d9-b28f-48bd-a021-5c320454a5ec"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2038,7 +2038,7 @@
         },
         "outputId": "4917e13b-8c43-49e3-fadf-8a47d3ebb451"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2065,7 +2065,7 @@
           "height": 35
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2095,7 +2095,7 @@
           "height": 35
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2125,7 @@
         },
         "outputId": "4530adcb-c9f1-4b80-e2da-c4ed8ea4f400"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2152,7 +2152,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2184,7 +2184,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2210,7 +2210,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2236,7 +2236,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2265,7 +2265,7 @@
         },
         "outputId": "02f3cf50-ab55-4e7a-b036-37b8ed455356"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2298,7 +2298,7 @@
         },
         "outputId": "993aeb21-bf34-4a83-e552-71fe12baefcd"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2327,7 +2327,7 @@
         },
         "outputId": "9b4a07a9-e240-4b5f-99a9-f634952440b4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2353,7 +2353,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2378,7 +2378,7 @@
         },
         "outputId": "8f530391-482f-49bc-c754-265685abbab3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2404,7 +2404,7 @@
         },
         "outputId": "ebbf2f68-0b49-44ef-e543-c8b2ee62b434"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2430,7 +2430,7 @@
         },
         "outputId": "b554cb71-4d33-4d9d-cd0c-44a3499af64d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2456,7 +2456,7 @@
         },
         "outputId": "7789c389-b857-4525-cae7-474d8f03c09a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2493,7 +2493,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2521,7 +2521,7 @@
         },
         "outputId": "f3d4030a-05a7-4656-f804-ba6b1968308b"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2548,7 +2548,7 @@
         },
         "outputId": "a68e00c6-fec7-4d95-f2e0-61821a59f053"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2574,7 +2574,7 @@
         },
         "outputId": "e12a045c-6734-468d-9a44-343bc7d2eee3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2602,7 +2602,7 @@
         },
         "outputId": "f9b39d30-6fd3-44f3-e3de-06d751f12752"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2629,7 +2629,7 @@
         },
         "outputId": "df7135d4-0f59-4b70-f272-04a4c1216e81"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2665,7 +2665,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2692,7 +2692,7 @@
         },
         "outputId": "3d6c64ba-76b2-466c-af19-e3607fab296f"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2718,7 +2718,7 @@
         },
         "outputId": "c3bad0c5-2a08-48bf-b57d-8f3812b595e5"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2745,7 +2745,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2784,7 +2784,7 @@
         },
         "outputId": "4ff6a907-e94c-428f-b138-007624232b5e"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2813,7 +2813,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2865,7 +2865,7 @@
       "metadata": {
         "id": "rQUWREUEt16h"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2882,7 +2882,7 @@
         },
         "outputId": "a44d4d1d-cdfd-4990-b9b2-4e14b4e0b548"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2907,7 +2907,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2943,7 +2943,7 @@
         },
         "outputId": "457b1d7d-10eb-43d3-e90d-5cf68cf31661"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2969,7 +2969,7 @@
         },
         "outputId": "a9a76e49-a4a0-41e3-ec64-bd40e53b6907"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3008,7 +3008,7 @@
         },
         "outputId": "63008a58-8670-4a9b-e704-ecbcb864d554"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3039,7 +3039,7 @@
         },
         "outputId": "3ba2a360-5294-47af-c3c9-1caa2eae3b5f"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3071,7 +3071,7 @@
         },
         "outputId": "d06fafbd-f0d5-4afa-8b6c-7c06667268a5"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3114,7 +3114,7 @@
         },
         "outputId": "2397945d-012e-4f5d-9fea-00f627cdfd13"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3157,7 +3157,7 @@
         },
         "outputId": "97e6b83f-17a4-49f6-e3dd-bb10049ecaab"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3198,7 +3198,7 @@
         },
         "outputId": "6e4438a8-86e1-4a68-9437-29cca6f86335"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3214,7 +3214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "gfZbhzLN7ptc",
         "colab": {
@@ -3274,7 +3274,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3322,7 +3322,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3358,7 +3358,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3391,7 +3391,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3441,7 +3441,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -3563,6 +3563,49 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "prompt = \"\\nIngrese el ingrediente para su pizza:\"\n",
+        "prompt += \"\\nEscribe 'salir' para finalizar. \"\n",
+        "\n",
+        "active = True\n",
+        "while active:\n",
+        "  message = input(prompt)\n",
+        "\n",
+        "  if message == 'salir':\n",
+        "    active = False\n",
+        "  else:\n",
+        "    print(f\"se agregará {message} a su pizza.\")"
+      ],
+      "metadata": {
+        "id": "Yzrpgz8vpbhS",
+        "outputId": "3b7dc112-836a-4b93-c43d-37e9bee47cb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Ingrese el ingrediente para su pizza:\n",
+            "Escribe 'salir' para finalizar. salchichas\n",
+            "se agregará salchichas a su pizza.\n",
+            "\n",
+            "Ingrese el ingrediente para su pizza:\n",
+            "Escribe 'salir' para finalizar. piña\n",
+            "se agregará piña a su pizza.\n",
+            "\n",
+            "Ingrese el ingrediente para su pizza:\n",
+            "Escribe 'salir' para finalizar. salir\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "<b> Ejercicio 2</b>\n",
@@ -3572,6 +3615,48 @@
       "metadata": {
         "id": "ATFL1LTaFDoF"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = int(input('ingrese su edad: '))\n",
+        "\n",
+        "if age < 3:\n",
+        "  price = 0\n",
+        "elif age < 12:\n",
+        "  price = 10\n",
+        "elif age >= 12:\n",
+        "  price = 15\n",
+        "\n",
+        "print(f\"El costo del bolesto es S/.{price}.\")"
+      ],
+      "metadata": {
+        "id": "S7VQZyoaqxfT",
+        "outputId": "da5482da-25d5-4096-8bbc-cd040b43d386",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingrese su edad: 50\n",
+            "El costo del bolesto es S/.15.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "a5pWlimOpb-z"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3664,6 +3749,63 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "pizza_favorita = ['ranchera', 'cuatro estaciones', 'napolitana']\n",
+        "\n",
+        "for i in pizza_favorita:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "DkrKi3Mssady",
+        "outputId": "49979674-25c8-4bce-e43a-8c5f61e4c89a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ranchera\n",
+            "cuatro estaciones\n",
+            "napolitana\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in pizza_favorita:\n",
+        "  print(f\"Me gusta la pizza {i}\")\n",
+        "\n",
+        "print('¡Me encanta la pizza!')"
+      ],
+      "metadata": {
+        "id": "0WHARim_svNC",
+        "outputId": "017df73c-821c-4002-9509-8f3d65042f78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Me gusta la pizza ranchera\n",
+            "Me gusta la pizza cuatro estaciones\n",
+            "Me gusta la pizza napolitana\n",
+            "¡Me encanta la pizza!\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "<b> Ejercicio 2</b>\n",
@@ -3676,6 +3818,62 @@
       "metadata": {
         "id": "CBNrK6wXHnEm"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "animales = ['perro', 'gato', 'chancho']\n",
+        "for i in animales:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "hEtGQ7xJtG0K",
+        "outputId": "a82dd5f4-50ae-4954-f354-1181bc325564",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "perro\n",
+            "gato\n",
+            "chancho\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in animales:\n",
+        "  print(f\"Un {i} sería una gran mascota\")\n",
+        "\n",
+        "print(\"Todos estos animales son mamíferos\")"
+      ],
+      "metadata": {
+        "id": "sd21efWXtXBz",
+        "outputId": "6a3076db-5254-43f2-c131-a85dd61fb27c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Un perro sería una gran mascota\n",
+            "Un gato sería una gran mascota\n",
+            "Un chancho sería una gran mascota\n",
+            "Todos estos animales son mamíferos\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
